# goamp

./: .gitignore  Makefile  index.html  lefthook.yml  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: my-tasks.md
goamp-node/: go.mod  go.sum
goamp-node/account/: manifest.go  manifest_test.go  master.go  master_test.go  mnemonic.go  mnemonic_test.go  quiz.go  quiz_test.go  statekey.go  statekey_test.go  subkey.go  subkey_test.go
goamp-node/api/: account_handlers.go  account_handlers_test.go  catalog_handlers.go  health.go  plugin_proxy.go  profile_handlers.go  server.go  server_test.go  session_handlers.go  session_handlers_test.go  state_handlers.go  state_handlers_test.go  websocket.go
goamp-node/client-sdk/: package.json
goamp-node/config/: config.go  config_test.go
goamp-node/identity/: identity.go  identity_test.go
goamp-node/proto/: goamp.pb.go  goamp.proto  goamp_grpc.pb.go  mood_centroid.go
goamp-node/relay/: server.go  server_test.go  session_handlers.go  session_handlers_test.go  signer.go  signer_test.go  store.go  store_test.go
goamp-node/sdk/: interfaces.go
goamp-node/session/: session.go  session_test.go
goamp-node/store/: migrations.go  sqlite.go  sqlite_test.go  store.go
goamp-node/sync/: client.go  client_test.go  e2e_test.go
goamp-node/userstate/: crypto.go  crypto_test.go  state.go  (+1 more)
scripts/: e2e-node.sh  release.sh
src/: main.ts  styles.css  webamp.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: account.rs  aggregator.rs  feature_flags.rs  history.rs  hook.rs  http.rs  lib.rs  main.rs  md5.rs  media_keys.rs  mood_engine.rs  node.rs  node_client.rs  radio.rs  recommend.rs  scrobble.rs  survey.rs  sybil.rs  taste_profile.rs  track_features.rs  track_id.rs  tray.rs  yandex.rs
src-tauri/src/commands/: account.rs  files.rs  mod.rs  mood.rs  playlists.rs  youtube.rs
src-tauri/src/db/: mod.rs
(+122 files in other folders)
