[package]
name = "goamp"
version = "0.1.0"
description = "Winamp-style music player powered by Go + Tauri"
authors = ["moffaty"]
edition = "2021"

[lib]
name = "goamp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

