[package]
name = "goamp"
version = "0.1.0"
description = "Winamp-style music player powered by Go + Tauri"
authors = ["moffaty"]
edition = "2021"

[lib]
name = "goamp_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
sentry = "0.42"
rdev = "0.5.3"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["process"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
souvlaki = "0.7"
